--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,8 +4,11 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: 
+    email: ciccio@pasticcio.com
+    rating: 1550
+    deviation: 34
+    volatility: 0.3
+
 # column: value
 #
-two: {}
-#  column: value
