user data doesnt work

--- a/config/user_data.yml
+++ b/config/user_data.yml
@@ -1,9 +1,14 @@
 #cloud-config
 runcmd:
-    - wget https://apt.puppetlabs.com/puppetlabs-release-trusty.deb
+    - wget "https://apt.puppetlabs.com/puppetlabs-release-trusty.deb"
     - dpkg -i puppetlabs-release-trusty.deb
     - apt-get update
-packages:
-    - puppet
-    - git
-    - ruby
+    - apt-get install puppet git ruby
+    - puppet module install puppetlabs-apt
+    - puppet module install attachmentgenie-ufw
+    - puppet module install justinclayton-sudo
+    - puppet module install saz-ssh
+    - puppet module install puppetlabs-postgresql
+    - puppet module install puppetlabs-vcsrepo
+    - puppet module install eirc-single_user_rvm
+    - puppet module install DracoBlue-nginx
