move create droplet to capistrano

--- a/config/user_data.yml
+++ b/config/user_data.yml
@@ -1,4 +1,5 @@
 #!/usr/bin/env bash
+set -e
 wget "https://apt.puppetlabs.com/puppetlabs-release-trusty.deb"
 dpkg -i puppetlabs-release-trusty.deb
 apt-get update
